# libshell

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: example.cpp.15DF1B02E846C808.idx  libshell.cpp.DB1ED4C0F0B37B03.idx  libshell.hpp.C78B43AC5480E06F.idx
example/: example.cpp
include/: libshell.hpp
src/: libshell.cpp  main.cpp
